# FLL-Music-Project

./: .gitignore  Build.py  GUI.py  GUI_Elements.py  LICENSE  Main.py  README.md  VolumeControl.py  build.py  requirements.txt  setup.cfg  setup.py  volumemanagement.py
.github/workflows/: python-build-matrix.yml  python-build.yml
GUI_Elements/: Timer.py  sheet.py  testDataSheetWindow.py
deprecated/: volumeup.py
fll_presenter/: GUI.py  Main.py  VolumeControl.py  config_GUI.py  config_gui.py  gui.py  main.py  shared_functions.py  test.py
fll_presenter/GUI/: config_gui.py  shared_functions.py
fll_presenter/GUI/GUI_Elements/: timer.py  volume_control.py  window_control.py
fll_presenter/GUI/GUI_configurations/: main_gui.py  music_only_gui.py  timer_only_gui.py
fll_presenter/GUI/window_creation/: __init__.py  controller_window.py  error_window.py  timer_window.py
fll_presenter/GUI_Elements/: Timer.py  VolumeControl.py  WindowControl.py  timer.py  volume_control.py  window_control.py
fll_presenter/GUI_configurations/: gui.py  main_gui.py  music_only_gui.py  timer_only_gui.py
src/fll_presenter/: GUI.py
src/fll_presenter/GUI_Elements/: Timer.py  sheet.py
