[metadata]
name = fll_presenter
version = 0.0.0.0.1
author = Due Westerners
author_email = frc-programmers@duewestrobotics.org
description = A QOL enhancement for FLL timers and scorekeepers
license = MIT

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
python_requires = >=3.7
install_requires =
    customtkinter >= 5.2.1
    pycaw >= 20230407
    packaging >= 23.2

[options.packages.find]
where=src
#include=
#exclude=